--- a/sass/components/_testomonials.scss
+++ b/sass/components/_testomonials.scss
@@ -34,6 +34,7 @@
 
 .testimonial-slider {
     overflow: hidden;
+    z-index: 1;
 
     & .swiper-pagination-bullet {
         background-color: var(--btn-color);
